cmake_minimum_required(VERSION 3.8)
project(ur5_arm_control)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

message(${PROJECT_NAME})

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(trajectory_msgs REQUIRED)
find_package(sensor_msgs REQUIRED)
find_package(ur_rtde REQUIRED)

include_directories(include)

add_executable(${PROJECT_NAME} src/main.cc
        src/hand_to_arm_logic.cc
        src/ur_rtde_test.cc)

target_link_libraries(${PROJECT_NAME} ur_rtde::rtde)

ament_target_dependencies(${PROJECT_NAME}
        rclcpp
        trajectory_msgs
        sensor_msgs
)

install(TARGETS
        ${PROJECT_NAME}
        DESTINATION lib/${PROJECT_NAME})

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
